Bugfix: Enter draw column not showing on larger widths

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -749,7 +749,7 @@ footer .social-media-links {
     }
 
     .enter-draw-column {
-       display: none;
+       display: block;
     }
 
     .enter-draw-wrapper {
